# sketchup-mcp2

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  Rakefile  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: bed-d-cutting-layouts.md  bed-drawer-slides-research.md  release.md  sketchup-ruby-cookbook.md
docs/superpowers/plans/: 2026-05-11-menu-settings-ui-continuation-prompt.md  2026-05-11-menu-settings-ui-execution-prompt.md  2026-05-11-menu-settings-ui.md  2026-05-16-version-compat-check-continuation-prompt-iter2.md  2026-05-16-version-compat-check-continuation-prompt.md  2026-05-16-version-compat-check-execution-prompt.md  2026-05-16-version-compat-check-plan.md  2026-05-16-viewport-screenshot-and-prompt-continuation-prompt.md  2026-05-16-viewport-screenshot-and-prompt-plan.md  2026-05-17-multi-client-server-continuation-prompt-after-external-review.md  2026-05-17-multi-client-server-continuation-prompt.md  2026-05-17-multi-client-server-execution-prompt.md  2026-05-17-multi-client-server.md  2026-05-17-v0.1.0-release-ceremony-continuation-prompt.md  2026-05-17-version-compat-check-continuation-prompt-after-review.md  2026-05-17-version-compat-check-finish-branch-prompt.md  2026-05-28-warehouse-resubmit-after-task1-continuation-prompt.md  2026-05-28-warehouse-resubmit-after-task12-continuation-prompt.md  2026-05-28-warehouse-resubmit-after-task4-continuation-prompt.md  2026-05-28-warehouse-resubmit-after-task7-continuation-prompt.md  2026-05-28-warehouse-resubmit-after-task8-continuation-prompt.md  2026-05-28-warehouse-resubmit-after-task9-continuation-prompt.md  2026-05-28-warehouse-resubmit-execution-prompt.md  2026-05-28-warehouse-resubmit-iter1-continuation-prompt.md  2026-05-28-warehouse-resubmit-iter1-remaining-fixes.md  2026-05-28-warehouse-resubmit-iter2-continuation-prompt.md  2026-05-28-warehouse-resubmit-iter2-post-completion-prompt.md  2026-05-28-warehouse-resubmit-iter2-round-2-continuation-prompt.md  2026-05-28-warehouse-resubmit.md  2026-05-29-external-review-after-F1-continuation-prompt.md  2026-05-29-external-review-complete-continuation-prompt.md  2026-05-29-rejection-audit-done-pre-rereview-continuation-prompt.md  2026-05-29-warehouse-resubmit-after-github-acceptance-continuation-prompt.md  (+33 more)
examples/: smoke_check.py  smoke_multi_client.py
mcp_for_sketchup/: extension.json  mcp_for_sketchup.rb  package.rb
mcp_for_sketchup/mcp_for_sketchup/: main.rb
src/sketchup_mcp/: __main__.py  app.py  compat.py  config.py  connection.py  errors.py  prompts.py  server.py  tools.py
su_mcp/: extension.json  package.rb  su_mcp.rb
su_mcp/su_mcp/: main.rb
test/: run_all.rb  test_application.rb  test_application_show_log.rb  test_boolean_direction.rb  test_build_profile_fixture.rb  test_client_state.rb  test_collect_components.rb  test_compat.rb  test_config.rb  test_config_logger_guard.rb  test_dispatch_post_handshake.rb  test_entities_unique.rb  test_errors.rb  test_export_options.rb  test_export_skp.rb  test_extension_json.rb  test_framing.rb  test_geometry_builders.rb  test_helpers_geometry.rb  test_joint_cut_stats.rb  test_joints_frame_compensation.rb  test_joints_validation.rb  test_logger.rb  test_model_empty_bbox.rb  test_model_pagination.rb  test_operation_names.rb  test_package_default_variant.rb  test_pure_helpers.rb  test_server_bind_warning.rb  test_server_compat.rb  test_server_handshake.rb  test_server_multi_client.rb  test_settings_dialog.rb  test_settings_validation.rb  test_state_machine.rb  test_system.rb  test_transform_absolute.rb  test_units.rb  test_validation.rb  test_version_triple.rb  (+1 more)
test/support/: config_reset.rb  fake_socket.rb  frame_helpers.rb
tests/: conftest.py  test_app.py  test_compat.py  test_config.py  test_connection.py  test_framing.py  test_prompts.py  test_screenshot.py  test_smoke_helpers.py  test_tool_descriptions.py  test_tools.py  test_version_handshake.py  test_version_tool.py
(+80 files in other folders)
